# cuQuantum

./: 30_DAY_ACTION_PLAN.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_ROADMAP.md  DOCUMENTATION_SUMMARY.md  EXAMPLES_CHECKLIST.md  EXAMPLES_PROGRESS.md  EXAMPLES_SUMMARY.md  FIRST_CONTRIBUTION_PROPOSAL.md  LICENSE  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_GUIDE.md  START_HERE.md
python/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
python/builder/: __init__.py  pep517.py  utils.py
python/cuquantum/: __init__.py  __main__.py  _utils.pxd  _utils.pyx  _version.py  memory.py  utils.pxd  utils.py  utils.pyx
python/cuquantum/_internal/: __init__.py  enum_utils.py  formatters.py  mem_limit.py  package_ifc.py  package_ifc_cupy.py  package_ifc_torch.py  package_wrapper.py  tensor_ifc.py  tensor_ifc_cupy.py  tensor_ifc_numpy.py  tensor_ifc_torch.py  tensor_wrapper.py  typemaps.py  utils.py
python/cuquantum/bindings/: __init__.py  _utils.pxd  _utils.pyx  cudensitymat.pxd  cudensitymat.pxi  cudensitymat.pyx  cupauliprop.pxd  cupauliprop.pyx  custabilizer.pxd  custabilizer.pyx  custatevec.pxd  custatevec.pyx  cutensornet.pxd  cutensornet.pyx  cycudensitymat.pxd  cycudensitymat.pyx  cycupauliprop.pxd  cycupauliprop.pyx  cycustabilizer.pxd  cycustabilizer.pyx  cycustatevec.pxd  cycustatevec.pyx  cycutensornet.pxd  cycutensornet.pyx
python/cuquantum/custatevec/: __init__.py  custatevec.pxd  custatevec.pyx  cycustatevec.pxd  cycustatevec.pyx
python/cuquantum/cutensornet/: __init__.pxd  __init__.py  circuit_converter.py  configuration.py  cutensornet.pxd  cutensornet.pyx  cycutensornet.pxd  cycutensornet.pyx  experimental.py  memory.py  tensor.py  tensor_network.py
python/cuquantum/densitymat/: __init__.py  callbacks.py  elementary_operator.py  matrix_operator.py  matrix_product_operator.py  memory.py  operators.py  spectrum.py  state.py  time_propagation.py  work_stream.py
python/cuquantum/stabilizer/: __init__.py  _options.py  bit_matrix.py  dem_sampling.py  pauli_table.py  simulator.py  utils.py
python/cuquantum/tensornet/: __init__.py  circuit_converter.py  configuration.py  memory.py  tensor.py  tensor_network.py
python/extensions/: LICENSE  MANIFEST.in  README.md  configure.sh  pyproject.toml  pyproject.toml.template  setup.py
python/extensions/samples/: example1_dense.py  example1_operator_action.py  example2_multidiagonal.py  example2_operator_action_callbacks.py  example3_matrix.py  example3_operator_action_multidiagonal.py  example4_batched_state.py  example4_operator_action_vjp.py  example5_batched_op_state.py  example6_grad.py  example7_batched_grad.py
python/extensions/tests/: test_context.py  test_elementary_operator.py  test_matrix_operator.py  test_operator.py  test_operator_term.py  test_operators.py
python/samples/: accessor_get.py  accessor_set.py  batch_measure.py  diagonal_matrix.py  expectation.py  expectation_pauli.py  exponential_pauli.py  gate_application.py  measure_zbasis.py  memory_handler.py  mgpu_batch_measure.py  mgpu_sampler.py  permutation_matrix.py  sampler.py  swap_index_bits.py  tensornet_example.py  test_matrix_type.py
python/samples/circuit_converter/: cirq_advanced.ipynb  cirq_basic.ipynb  qiskit_advanced.ipynb  qiskit_basic.ipynb
python/samples/coarse/: example1.py  example10.py  example11.py  example12.py  example13.py  example14.py  example15.py  example16.py  example17.py  example18.py  example19.py  example2.py  example20.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py
python/samples/custatevec/: accessor_get.py  accessor_set.py  batch_measure.py  batched_abs2sum.py  batched_collapse.py  batched_expectation.py  batched_gate_application.py  batched_measure.py  diagonal_matrix.py  distributed_index_bit_swap_mpi.py  expectation.py  expectation_pauli.py  exponential_pauli.py  gate_application.py  initialize_sv.py  measure_zbasis.py  memory_handler.py  mgpu_batch_measure.py  mgpu_sampler.py  mgpu_swap_index_bits.py  permutation_matrix.py  sampler.py  subsv_migration.py  swap_index_bits.py  test_matrix_type.py
python/samples/cutensornet/: tensornet_example.py  tensornet_example_gradients.py  tensornet_example_mpi.py  tensornet_example_mpi_auto.py  tensornet_example_reuse.py
python/samples/densitymat/: batched_operator_example.py  dense_operator_example.py  gradient_scalar_callback_example.py  gradient_tensor_callback_example.py  lindbladian_example.py  matrix_operator_example.py  mps_tdvp_example.py  multidiagonal_operator_example.py  operator_advanced.py  operator_advanced_example.py  operator_defaults.py  operator_defaults_example.py  operator_mpi.py  (+3 more)
python/tests/: conftest.py  pytest.ini  requirements.txt  run_python_tests.sh
samples/cudensitymat/: CMakeLists.txt  Makefile  README.md  helpers.h  mps_tdvp_example.cpp  operator_action_example.cpp  operator_action_gradient_example.cpp  operator_action_mpi_example.cpp  operator_action_nccl_example.cpp  operator_eigenspectrum_example.cpp  transverse_ising_full_fused.h  transverse_ising_full_fused_noisy.h  transverse_ising_full_fused_noisy_grad.h
samples/cupauliprop/: CMakeLists.txt  Makefile  kicked_ising_backward_diff_example.cpp  kicked_ising_example.cpp
samples/custabilizer/: CMakeLists.txt  README.md  custabilizer_demo.cpp
samples/custatevec/: CMakeLists.txt  LICENSE  Makefile  README.md  accessor_get.cu  accessor_set.cu  batch_measure.cu  batched_abs2sum.cu  batched_collapse.cu  batched_gate_application.cu  batched_measure.cu  diagonal_matrix.cu  expectation.cu  expectation_pauli.cu  exponential_pauli.cu  gate_application.cu  helper.hpp  initialize_sv.cu  measure_zbasis.cu  memory_handler.cu  mgpu_batch_measure.cu  mgpu_sampler.cu  mgpu_swap_index_bits.cu  permutation_matrix.cu  sampler.cu  subsv_migration.cu  swap_index_bits.cu  test_matrix_type.cu
samples/cutensornet/: CMakeLists.txt  Makefile  README.md  tensornet_example.cu  tensornet_example_gradients.cu  tensornet_example_mpi.cu  tensornet_example_mpi_auto.cu  tensornet_example_reuse.cu
(+598 files in other folders)
