# Copyright (c) 2021-2025, NVIDIA CORPORATION & AFFILIATES
#
# SPDX-License-Identifier: BSD-3-Clause


[build-system]
requires = [
    # 3.1.{0|1}: https://github.com/cython/cython/issues/6841
    "Cython>=3.0.4,!=3.1.0,!=3.1.1", 
    "setuptools>=77.0.3", 
    "packaging", 
    "wheel"
]
build-backend = "setuptools.build_meta"
